# navaltoolbox-lib

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/source/: conf.py  index.rst
docs/source/api/python/: hydrostatics.rst  index.rst  loading.rst  stability.rst  tanks.rst
docs/source/examples/: loading_condition_template.csv
docs/source/tutorials/: stability.rst
docs/source/userguide/: installation.rst
python/: README.md  test.py
python/navaltoolbox/: __init__.py  navaltoolbox.pyi  visualization.py
python/tests/: test_loading.py
rust/: Cargo.toml
rust/src/: lib.rs  python.rs  vessel.rs
rust/src/hydrostatics/: calculator.rs
rust/src/loading/: dataclasses.rs  mod.rs
rust/src/silhouette/: core.rs
rust/src/stability/: calculator.rs  complete.rs
rust/tests/: integration_tests.rs
