[package]
name = "navaltoolbox"
version = "0.9.0"
edition = "2021"
description = "High-performance naval architecture library for hydrostatics, stability, and tank calculations"
authors = ["Antoine ANCEAU"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/NavalToolbox/navaltoolbox-lib"
homepage = "https://github.com/NavalToolbox/navaltoolbox-lib"
documentation = "https://docs.rs/navaltoolbox"
keywords = ["naval", "hydrostatics", "stability", "marine", "engineering"]
categories = ["science", "simulation"]
readme = "../README.md"

[lib]
name = "navaltoolbox"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Geometry and collision detection (f64 precision)
parry3d-f64 = "0.18"
# Linear algebra
nalgebra = "0.33"
# STL file loading
stl_io = "0.8"
# Fast polygon triangulation for waterline caps
earcutr = "0.4"
# Ordered floats for HashMap keys
ordered-float = "4.6"
# Error handling
thiserror = "2.0"
# DXF file loading for silhouettes
dxf = "0.5"
# VTK file loading for silhouettes
vtkio = "0.6"
# Logging
log = "0.4"
# Parallel processing
rayon = "1.10"

# Scripting engine for criteria verification
rhai = { version = "1.19", features = ["sync", "serde"] }
# Serialization for script results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meshopt = "0.6"
csv = "1.4.0"

# Python bindings (optional)
[dependencies.pyo3]
version = "0.23"
features = ["extension-module"]
optional = true

[features]
default = []
python = ["dep:pyo3"]

[dev-dependencies]
# For testing
approx = "0.5"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
